update for The Fire week 4

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -37,42 +37,40 @@
 
   <div align="middle"><img src="./img/logo-fps-pel.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1>Week 3 - The Fire</h1>
+  <h1>Week 4 - The Fire</h1>
 
   <h2>Life / Intro Questions</h2>
     <ul>
-      <li>What things did you do this week to work on being humble?</li>
-      <li>What are some things you love in your life? People, things, sports etc.</li>
+      <li>How did you like this month’s series? Biggest takeaway?</li>
+      <li>What are some goals you have for the month of March?</li>
     </ul>
 
   <h2>Connection Question</h2>
     <ul>
-      <li>Share about a time where you did something you weren’t supposed to do and got in trouble with your parents. How did you explain yourself and what did you say to them?</li>
+      <li>Have everyone share a story about a time where they wanted something really bad, but then they discovered how much it cost.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
     <ul>
-      <li>Love is always the answer.</li>
+      <li>The price of following Jesus is always worth the outcome.</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>Isaiah 6:8</b> Then I heard the Lord asking, “Whom should I send as a messenger to this people? Who will go for us?” I said, “Here I am. Send me.”</li>
+      <li><b>Luke 14:27-28</b> And whoever does not carry their cross and follow me cannot be my disciple. Suppose one of you wants to build a tower. Won’t you first sit down and estimate the cost to see if you have enough money to complete it?</li>
      <li>What is Jesus saying in this scripture?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>How often do you find yourself saying that you hate someone or something? Like “Ugh I hate this teacher because she gives us too much homework.” Do you actually hate them or is it just a meaningless expression at this point? Explain.</li>
-    <li>How often do you try to take control of your own life and then it ends up not going good? Explain a time that happened?</li>
-    <li>Do you think that every person out there, no matter the bad they’ve done, should have a chance to get into the kingdom of God? Explain why or why not.</li>
+    <li>How often do you find yourself trying to have a relationship with God like a Burger King burger, “your way?” Explain how they can’t pick and choose parts of the Bible they don’t want to follow but once they commit to following God, it’s always His way over our way.</li>
+    <li>Have you ever been frustrated because God’s plans for you were confusing and you weren’t sure that was the way you wanted to go? Explain a time.</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-    <li>How can you work on humbly loving everyone this week? Remind them that people are not their enemy because God desires all people to be saved in the kingdom of God.</li>
-    <li>Remind students that when they commit their lives to God, He is ultimately in charge. This means they have to move out of the drivers’ seat and let God drive their life while they just have faith.</li>
+    <li>After going through this series, what are some ways that you can live “on fire” for God? Remind them that following God isn’t always an easy life but it’s a rewarding one. Being on fire for God is ultimately going to draw people in. At this time, give some time to have students repent of their sins and pray for them and with them.</li>
   </ul>
   
   <h2>Baptism Follow-Up</h2>
