update for March Madness week 1

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -35,55 +35,52 @@
 
 <body>
 
-  <div align="middle"><img src="./img/logo-fps-pel.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/fps-guide-logo.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1>Week 4 - The Fire</h1>
+  <h1>March Madness: Week 1</h1>
 
-  <h2>Life / Intro Questions</h2>
+  <h2>Life / Intro Questions (Choose 1 or 2)</h2>
     <ul>
-      <li>How did you like this month’s series? Biggest takeaway?</li>
-      <li>What are some goals you have for the month of March?</li>
+      <li>When was a time you were invited to something that meant a lot to you?</li>
+      <li>What is your favorite part of Wednesday night?</li>
     </ul>
 
   <h2>Connection Question</h2>
     <ul>
-      <li>Have everyone share a story about a time where they wanted something really bad, but then they discovered how much it cost.</li>
+      <li>Why do you think God gave us the task of inviting our friends and family to a relationship with Him?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
     <ul>
-      <li>The price of following Jesus is always worth the outcome.</li>
+      <li>God gave you the purpose of inviting those around you into a relationship with Him.</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>Luke 14:27-28</b> And whoever does not carry their cross and follow me cannot be my disciple. Suppose one of you wants to build a tower. Won’t you first sit down and estimate the cost to see if you have enough money to complete it?</li>
-     <li>What is Jesus saying in this scripture?</li>
+      <li><b>Colossians 1:13-14</b> For he has rescued us from the kingdom of darkness and transferred us into the Kingdom of his dear Son, <sup>14</sup> who purchased our freedom and forgave our sins.</li>
+     <li>How does it make you feel when you think of what Jesus has rescued you from?</li>
+     <li><b>Romans 10:14</b> How, then, can they call on the one they have not believed in? And how can they believe in the one of whom they have not heard? And how can they hear without someone preaching to them?</li>
+     <li>In what ways this week can we live out this verse?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>How often do you find yourself trying to have a relationship with God like a Burger King burger, “your way?” Explain how they can’t pick and choose parts of the Bible they don’t want to follow but once they commit to following God, it’s always His way over our way.</li>
-    <li>Have you ever been frustrated because God’s plans for you were confusing and you weren’t sure that was the way you wanted to go? Explain a time.</li>
+    <li>What can happen if we DON’T live out our purpose?</li>
+    <li>What are the barriers that stand in the way of you living out your purpose?</li>
+    <li>What can you do this week to break down those barriers?</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-    <li>After going through this series, what are some ways that you can live “on fire” for God? Remind them that following God isn’t always an easy life but it’s a rewarding one. Being on fire for God is ultimately going to draw people in. At this time, give some time to have students repent of their sins and pray for them and with them.</li>
+    <li>Challenge your students to name 3 people (first names only – this isn’t gossip time) in their lives that they are going to invite and share their faith with.</li>
   </ul>
-  
-  <h2>Baptism Follow-Up</h2>
-  <ul>
-    <li>Did you make a decision to follow Jesus for the first time at Fusion? Or maybe even tonight?</li>
-    <li>Have you made that decision sometime in the past but you've never gone public by being baptized?</li>
-  </ul>
-  <p>Baptism is our first official act of obedience as a new Christian and a super easy way to tell the world about your decision. Encourage your students to "seal the deal" and get baptized if they are a follower of Jesus!</p>
 
   <h2>Take It Out</h2>
   <ul>
-    <li>Close small group out with prayer requests.</li>
-    <li>After prayer, remind them of THE WEEKEND and any upcoming group events!</li>
+    <li>Close small group out with prayer requests – it is important that your students know that you pray for them regularly!</li>
+    <li>Remind them about the importance of baptism for new believers and encourage them get it scheduled for an upcoming weekend service. Attend the service with them and celebrate!</li>
+    <li>Remind them about attending FP this coming weekend, especially for the First Saturday Prayer Service on March 7 @ 9:00 AM!</li>
   </ul>
 
   </body>
