--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -83,6 +83,8 @@
     <li>Remind them about attending FP this coming weekend, especially for the First Saturday Prayer Service on March 7 @ 9:00 AM!</li>
   </ul>
 
+  <p><mark>Attention Leaders: We will have an EQUIP training event on Friday night, March 27. Both dinner and childcare will be provided. More details to be announced soon - get this on your calendar now!</mark></p>
+
   </body>
 
   </html>
