update for March Madness week 2

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -37,50 +37,52 @@
 
   <div align="middle"><img src="./img/fps-guide-logo.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1>March Madness: Week 1</h1>
+  <h1>March Madness: Week 2</h1>
 
   <h2>Life / Intro Questions (Choose 1 or 2)</h2>
     <ul>
-      <li>When was a time you were invited to something that meant a lot to you?</li>
-      <li>What is your favorite part of Wednesday night?</li>
+      <li>How do you like the March Madness series so far?</li>
+      <li>Who do you predict will go all the way in our preaching tournament?</li>
     </ul>
 
   <h2>Connection Question</h2>
     <ul>
-      <li>Why do you think God gave us the task of inviting our friends and family to a relationship with Him?</li>
+      <li>Have you ever put labels on yourself or have others ever labeled you? What were some labels?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
     <ul>
-      <li>God gave you the purpose of inviting those around you into a relationship with Him.</li>
+      <li>We find our identity through Jesus Christ, not anyone else.</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>Colossians 1:13-14</b> For he has rescued us from the kingdom of darkness and transferred us into the Kingdom of his dear Son, <sup>14</sup> who purchased our freedom and forgave our sins.</li>
-     <li>How does it make you feel when you think of what Jesus has rescued you from?</li>
-     <li><b>Romans 10:14</b> How, then, can they call on the one they have not believed in? And how can they believe in the one of whom they have not heard? And how can they hear without someone preaching to them?</li>
-     <li>In what ways this week can we live out this verse?</li>
+      <li><b>Genesis 1:27</b> So God created mankind in his own image, in the image of God he created them; male and female he created them.</li>
+      <li>What is Jesus saying in this scripture?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>What can happen if we DON’T live out our purpose?</li>
-    <li>What are the barriers that stand in the way of you living out your purpose?</li>
-    <li>What can you do this week to break down those barriers?</li>
+    <li>What do the words labels and identity mean to you? Explain.</li>
+    <li>How often do you find yourself labeling other people? Are they good or bad labels?</li>
+    <li>Do you find yourself trying to find your identity in other things such as people or social media? How come?</li>
+    <li>How do negative labels affect you? If comfortable, explain.</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-    <li>Challenge your students to name 3 people (first names only – this isn’t gossip time) in their lives that they are going to invite and share their faith with.</li>
+    <li>What are some things that keep you away from finding your identity in Jesus? (Friends, people’s opinions about you, social media?) How come?
+    </li>
+    <li>What are some steps this week that you can take to be able to find your identity in Jesus alone?</li>
+    <li>Who do have to keep you accountable this week for your spiritual growth? If they do not have an accountability partner or do not know what that means, explain and encourage them to find one so they can grow spiritually.</li>
   </ul>
 
   <h2>Take It Out</h2>
   <ul>
     <li>Close small group out with prayer requests – it is important that your students know that you pray for them regularly!</li>
     <li>Remind them about the importance of baptism for new believers and encourage them get it scheduled for an upcoming weekend service. Attend the service with them and celebrate!</li>
-    <li>Remind them about attending FP this coming weekend, especially for the First Saturday Prayer Service on March 7 @ 9:00 AM!</li>
+    <li>Remind them about attending FP with their family this coming weekend!</li>
   </ul>
 
   <p><mark>Attention Leaders: We will have an EQUIP training event on Friday night, March 27. Both dinner and childcare will be provided. More details to be announced soon - get this on your calendar now!</mark></p>
