update for March Madness week 3

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -37,45 +37,43 @@
 
   <div align="middle"><img src="./img/fps-guide-logo.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1>March Madness: Week 2</h1>
+  <h1>March Madness: Week 3</h1>
 
   <h2>Life / Intro Questions (Choose 1 or 2)</h2>
     <ul>
-      <li>How do you like the March Madness series so far?</li>
-      <li>Who do you predict will go all the way in our preaching tournament?</li>
+      <li>What sermon(s) did you connect with most this week?</li>
+      <li>How did you work on finding your identity last week?</li>
     </ul>
 
   <h2>Connection Question</h2>
     <ul>
-      <li>Have you ever put labels on yourself or have others ever labeled you? What were some labels?</li>
+      <li>Have you ever had to make a sacrifice for something or someone? Explain a time.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
     <ul>
-      <li>We find our identity through Jesus Christ, not anyone else.</li>
+      <li>Spending time with God in prayer, worship, and Bible reading is a sacrifice that needs to be made for God.</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>Genesis 1:27</b> So God created mankind in his own image, in the image of God he created them; male and female he created them.</li>
+      <li><b>Matthew 6:33</b> But seek first his kingdom and his righteousness, and all these things will be given to you as well.</li>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>What do the words labels and identity mean to you? Explain.</li>
-    <li>How often do you find yourself labeling other people? Are they good or bad labels?</li>
-    <li>Do you find yourself trying to find your identity in other things such as people or social media? How come?</li>
-    <li>How do negative labels affect you? If comfortable, explain.</li>
+    <li>How often do you spend time with God? Whether its bible reading, worshiping, or prayer.</li>
+    <li>Would you say you have a strong personal relationship with Jesus? Maybe explain what your personal relationship with God looks like.</li>
+    <li>Do you often prioritize other things in your life over Jesus? Have them explain what their true priorities are.</li>
+    <li>How do you think having other things over God makes him feel?</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-    <li>What are some things that keep you away from finding your identity in Jesus? (Friends, people’s opinions about you, social media?) How come?
-    </li>
-    <li>What are some steps this week that you can take to be able to find your identity in Jesus alone?</li>
-    <li>Who do have to keep you accountable this week for your spiritual growth? If they do not have an accountability partner or do not know what that means, explain and encourage them to find one so they can grow spiritually.</li>
+    <li>How can you take your first step to giving up something that is put over God?</li>
+    <li>What are some ways that you can prioritize your relationship with God this week? Guide them to a Bible reading plan if they feel lost or overwhelmed with the Bible. Encourage them to be accountable to each other so they can grow stronger together and with God.</li>
   </ul>
 
   <h2>Take It Out</h2>
@@ -85,7 +83,7 @@
     <li>Remind them about attending FP with their family this coming weekend!</li>
   </ul>
 
-  <p><mark>Attention Leaders: We will have an EQUIP training event on Friday night, March 27. Both dinner and childcare will be provided. More details to be announced soon - get this on your calendar now!</mark></p>
+  <p><mark>Attention Leaders: We will have an EQUIP training event on Friday night, March 27. Both dinner and childcare will be provided. Get registered today – it will only take a few seconds <a href="https://forms.gle/6CMjYajexQyH39k97">right here at FPSLeaders.com!</a></mark></p>
 
   </body>
 
