update for re-do

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -42,7 +42,7 @@
   <h2>Life / Intro Questions (Choose 1 or 2)</h2>
     <ul>
       <li>What sermon(s) did you connect with most this week?</li>
-      <li>How did you work on finding your identity last week?</li>
+      <li>In what ways do you think we can grow while we are stuck at home and many of our usual distractions are gone?</li>
     </ul>
 
   <h2>Connection Question</h2>
@@ -79,8 +79,8 @@
   <h2>Take It Out</h2>
   <ul>
     <li>Close small group out with prayer requests – it is important that your students know that you pray for them regularly!</li>
-    <li>Remind them about the importance of baptism for new believers and encourage them get it scheduled for an upcoming weekend service. Attend the service with them and celebrate!</li>
-    <li>Remind them about attending FP with their family this coming weekend!</li>
+    <li>Remind them about attending FP online with their family this coming weekend.</li>
+    <li>Tell them about all the opportunities we have to connect with FPS during the week on Instagram <a href="https://instagram.com/fpstudents">@fpstudents</a> and <a href="https://instagram.com/fps_pel">@fps_pel</a> – they don’t want to miss out on the fun!</li>
   </ul>
 
   <p><mark>Attention Leaders: We will have an EQUIP training event on Friday night, March 27. Both dinner and childcare will be provided. Get registered today – it will only take a few seconds <a href="https://forms.gle/6CMjYajexQyH39k97">right here at FPSLeaders.com!</a></mark></p>
