update for March Madness week 4

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -37,53 +37,50 @@
 
   <div align="middle"><img src="./img/fps-guide-logo.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1>March Madness: Week 3</h1>
+  <h1>March Madness: Week 4</h1>
 
   <h2>Life / Intro Questions (Choose 1 or 2)</h2>
     <ul>
       <li>What sermon(s) did you connect with most this week?</li>
-      <li>In what ways do you think we can grow while we are stuck at home and many of our usual distractions are gone?</li>
+      <li>How was your time with God last week?</li>
     </ul>
 
   <h2>Connection Question</h2>
     <ul>
-      <li>Have you ever had to make a sacrifice for something or someone? Explain a time.</li>
+      <li>Tell about a time when loving others was hard - why was that?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
     <ul>
-      <li>Spending time with God in prayer, worship, and Bible reading is a sacrifice that needs to be made for God.</li>
+      <li>God calls us to love one another as He loves us.</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>Matthew 6:33</b> But seek first his kingdom and his righteousness, and all these things will be given to you as well.</li>
-      <li>What is Jesus saying in this scripture?</li>
+      <li><b>John 13:34</b> - A new commandment I give to you, that you love one another: just as I have loved you, you also are to love one another.</li>
+      <li>How does Jesus show His love to us each day?</li>
+      <li>How should this effect our love on other people?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>How often do you spend time with God? Whether its bible reading, worshiping, or prayer.</li>
-    <li>Would you say you have a strong personal relationship with Jesus? Maybe explain what your personal relationship with God looks like.</li>
-    <li>Do you often prioritize other things in your life over Jesus? Have them explain what their true priorities are.</li>
-    <li>How do you think having other things over God makes him feel?</li>
+    <li>What are some practical ways that we can show love during the time of quarantine?</li>
+    <li>How can we lead each other in love?</li>
+    <li>What are some of the biggest obstacles to showing this kind of love?</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-    <li>How can you take your first step to giving up something that is put over God?</li>
-    <li>What are some ways that you can prioritize your relationship with God this week? Guide them to a Bible reading plan if they feel lost or overwhelmed with the Bible. Encourage them to be accountable to each other so they can grow stronger together and with God.</li>
+    <li>Name 3 ways you will show love this week to someone far from God.</li>
+    <li>What can you do right now to lead those you influence to do the same?</li>
   </ul>
 
   <h2>Take It Out</h2>
   <ul>
     <li>Close small group out with prayer requests – it is important that your students know that you pray for them regularly!</li>
     <li>Remind them about attending FP online with their family this coming weekend.</li>
-    <li>Tell them about all the opportunities we have to connect with FPS during the week on Instagram <a href="https://instagram.com/fpstudents">@fpstudents</a> and <a href="https://instagram.com/fps_pel">@fps_pel</a> – they don’t want to miss out on the fun!</li>
-  </ul>
-
-  <p><mark>Attention Leaders: We will have an EQUIP training event on Friday night, March 27. Both dinner and childcare will be provided. Get registered today – it will only take a few seconds <a href="https://forms.gle/6CMjYajexQyH39k97">right here at FPSLeaders.com!</a></mark></p>
+    <li>Tell them about all the opportunities they have to connect with FPS during the week on Instagram <a href="https://instagram.com/fpstudents">@fpstudents</a> and <a href="https://instagram.com/fps_pel">@fps_pel</a> – they don’t want to miss out on the fun!</li>  </ul>
 
   </body>
 
