update for March Madness week 5

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -37,43 +37,43 @@
 
   <div align="middle"><img src="./img/fps-guide-logo.png" alt="FPS Guide Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1>March Madness: Week 4</h1>
+  <h1>March Madness: Week 5</h1>
 
   <h2>Life / Intro Questions (Choose 1 or 2)</h2>
     <ul>
-      <li>What sermon(s) did you connect with most this week?</li>
-      <li>How was your time with God last week?</li>
+      <li>What was your biggest take away from the March Madness series?</li>
+      <li>How did spending personal time with God go over the past few weeks while in quarantine? Have You done anything differently in your quiet time?</li>
     </ul>
 
   <h2>Connection Question</h2>
     <ul>
-      <li>Tell about a time when loving others was hard - why was that?</li>
+      <li>What are some qualities/gifts that you have that are unique to you?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
     <ul>
-      <li>God calls us to love one another as He loves us.</li>
+      <li>There are spiritual gifts that God has specifically given you to use in order to show his goodness.</li>
     </ul>
 
   <h2>Scripture</h2>
     <ul>
-      <li><b>John 13:34</b> - A new commandment I give to you, that you love one another: just as I have loved you, you also are to love one another.</li>
-      <li>How does Jesus show His love to us each day?</li>
-      <li>How should this effect our love on other people?</li>
+      <li><b>1 Peter 4:10-11</b> As each has received a gift, use it to serve one another, as good stewards of God's varied grace: whoever speaks, as one who speaks oracles of God; whoever serves, as one who serves by the strength that God supplies—in order that in everything God may be glorified through Jesus Christ. To him belong glory and dominion forever and ever. Amen.</li>
+      <li>What is Jesus saying in this scripture?</li>
     </ul>
   
   <h2>Discussion Questions</h2>
   <ul>
-    <li>What are some practical ways that we can show love during the time of quarantine?</li>
-    <li>How can we lead each other in love?</li>
-    <li>What are some of the biggest obstacles to showing this kind of love?</li>
+    <li>What do you think having a spiritual gift looks like? Maybe give examples of some.</li>
+    <li>What spiritual gifts do you think God has blessed you with? Share what gifts you think you have.</li>
+    <li>How do you serve other people with these specific gifts? Or how are you not serving others with these gifts?</li>
+    <li>How do you think using your gifts can help further the Lord’s kingdom?</li>
   </ul>
 
   <h2>Life Application</h2>
   <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
   <ul>
-    <li>Name 3 ways you will show love this week to someone far from God.</li>
-    <li>What can you do right now to lead those you influence to do the same?</li>
+    <li>If you do not know what your God-given gifts are, how can you pinpoint them this week?</li>
+    <li>What are three ways this week that you can use your specific gifts to help further God’s kingdom? Quarantine life looks different, but there are still practical ways to love people from home.</li>
   </ul>
 
   <h2>Take It Out</h2>
